[package]
name = "Project_1"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = "0.8.3"
rusqlite = { version = "0.29", features = ["bundled"] }

[[bin]]
name = "Project_1"
path = "src/main.rs"
# Indique que l'application est une GUI (et non une console)
required-features = ["windows-gui"]

[features]
# gui activé sur windows
windows-gui = []
